--- a/.classpath
+++ b/.classpath
@@ -7,6 +7,8 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="/home/randy/eclipse/mysql-connector-java-8.0.22.jar"/>
-	<classpathentry kind="lib" path="/home/randy/Downloads/jfreechart-1.0.19/jfreechart-1.0.19-demo.jar"/>
+	<classpathentry kind="lib" path="/home/randy/eclipse/jfreechart-1.0.19-demo.jar"/>
+	<classpathentry kind="lib" path="/home/randy/Downloads/jfreechart-1.5.1/src/main"/>
+	<classpathentry kind="lib" path="/home/randy/Downloads/jfreechart-demo-1.5.1-jar-with-dependencies.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
